SDA/solution1/.autopilot/db/top.pp.0.cpp.clang-tidy.loop-label.out.log
D:\FPGA\SDA\SDA\solution1\.autopilot\db\top.pp.0.cpp:1450:7: warning: Added loop label VITIS_LOOP_1207_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1207_1: 
D:\FPGA\SDA\SDA\solution1\.autopilot\db\top.pp.0.cpp:1450:7: note: FIX-IT applied suggested code changes
D:\FPGA\SDA\SDA\solution1\.autopilot\db\top.pp.0.cpp:2424:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
D:\FPGA\SDA\SDA\solution1\.autopilot\db\top.pp.0.cpp:2424:5: note: FIX-IT applied suggested code changes
D:\FPGA\SDA\SDA\solution1\.autopilot\db\top.pp.0.cpp:2438:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
D:\FPGA\SDA\SDA\solution1\.autopilot\db\top.pp.0.cpp:2438:5: note: FIX-IT applied suggested code changes
D:\FPGA\SDA\SDA\solution1\.autopilot\db\top.pp.0.cpp:2452:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
D:\FPGA\SDA\SDA\solution1\.autopilot\db\top.pp.0.cpp:2452:5: note: FIX-IT applied suggested code changes
D:\FPGA\SDA\SDA\solution1\.autopilot\db\top.pp.0.cpp:4081:7: warning: Added loop label VITIS_LOOP_1247_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1247_1: 
D:\FPGA\SDA\SDA\solution1\.autopilot\db\top.pp.0.cpp:4081:7: note: FIX-IT applied suggested code changes
D:\FPGA\SDA\SDA\solution1\.autopilot\db\top.pp.0.cpp:9880:54: error: Invalid Directive: for current device, fifo +  is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable = fifo_SA_O type = fifo
                                                     ^
D:\FPGA\SDA\SDA\solution1\.autopilot\db\top.pp.0.cpp:9901:2: warning: Added loop label VITIS_LOOP_106_1:   [xilinx-label-all-loops]
 for(int i = 0; i < 32; i ++)
 ^~~
 VITIS_LOOP_106_1: 
D:\FPGA\SDA\SDA\solution1\.autopilot\db\top.pp.0.cpp:9901:2: note: FIX-IT applied suggested code changes
D:\FPGA\SDA\SDA\solution1\.autopilot\db\top.pp.0.cpp:9908:2: warning: Added loop label VITIS_LOOP_113_2:   [xilinx-label-all-loops]
 for(int i = 0; i < 64; i ++)
 ^~~
 VITIS_LOOP_113_2: 
D:\FPGA\SDA\SDA\solution1\.autopilot\db\top.pp.0.cpp:9908:2: note: FIX-IT applied suggested code changes
